--- a/index.css
+++ b/index.css
@@ -1,53 +1,68 @@
-    img{
-        display: block;
-        margin: auto;
-        width: 800px;
-        height: 500px;
-    }
-            p{
-              
-                color: rgb(255, 255, 255);
-            font-size: x-large;
-           text-shadow: 3px 3px black;
-            }
-            body {
-            background-image:url(https://s2.glbimg.com/RbgmWR1f6vIhwfXkM6FdhHRpTUk=/e.glbimg.com/og/ed/f/original/2019/12/30/sydney-opera-house-354375_1920.jpg);
+img{
+    display: block;
+    margin: auto;
+    width: 800px;
+    height: 500px;
+}
+        p { 
+          font-family: system-ui;
+            color: rgb(255, 255, 255);
+        font-size: x-large;
+       text-shadow: 2px 2px black;
+        }
+        body {
+            background-position: -50px -100px;
+        background-image: url(https://c.wallhere.com/photos/5c/b2/4000x2669_px_Australia_city_Cityscape_Perth-1370469.jpg!d);
+        background-attachment: fixed;
+        
+       
+        }
+        #titulo{
+            border-style: solid;
+            text-shadow: 3px 2px rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
+            border: 1px whitesmoke ;
+            background-image:url(https://image.shutterstock.com/image-vector/australian-flag-wind-260nw-53347735.jpg);
             background-size: cover;
+            padding: 20px;
+        }
+        h1 {
            
-            }
-            #titulo{
-                text-shadow: 3px 2px black;
-                color: white;
-                border: 6px whitesmoke solid;
-                background-image:url(https://image.shutterstock.com/image-vector/australian-flag-wind-260nw-53347735.jpg);
-                background-size: cover;
-                padding: 20px;
-            }
-            h1 {
-             color: white;
-                text-align: center;
-                text-shadow: 2px 2px black;
-               
-            }
-            h2{
-                text-align: left;
-                
-                color:rgb(0, 47, 255) ;
-           
-               text-shadow: 1px 1px white;
-            }
-            .subtitulo{
-                text-shadow: 1px 1px white;
-            }
-            h4{
-            color: black;
-            font-size:x-large;
-            }
-            .batata{
-                text-size-adjust: small;
             color: white;
-                text-shadow:2px 2px black;
-
-            }
+            text-align: center;
+            text-shadow: 2px 2px black;
+           
+        }
+        h2{
+            border-bottom: 6px solid rgb(255, 0, 0);
+  background-color: rgba(59, 53, 109, 0.192);
+            text-align: left;
+            
+            color:rgb(255, 255, 255) ;
     
-        </style>
+           text-shadow: 1px 1px black;
+        }
+        .subtitulo{
+            color: white;
+            text-shadow: 1px 1px black;
+        }
+        h4{
+            font-family:Helvetica, sans-serif, Arial;
+            text-shadow: 1px 1px black;
+            color: rgb(255, 255, 255);
+            font-size:x-large;
+        }
+        .batata{
+            text-size-adjust: small;
+        color: white;
+            text-shadow:2px 2px black;
+
+        }
+        a{
+        
+            font-family: system-ui;
+            color: white;
+        text-shadow: 1px black;
+        }
+
+    
