--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ img{
            
         }
         h2{
+            font-family: system-ui;
             border-bottom: 6px solid rgb(255, 0, 0);
   background-color: rgba(59, 53, 109, 0.192);
             text-align: left;
@@ -64,5 +65,22 @@ img{
             color: white;
         text-shadow: 1px black;
         }
+        .visto{
+            text-align: center;
+            font-family:system-ui;
+            color: rgb(207, 207, 207);
+        text-shadow: 2px 2px black;
+        }
+      h3{
+            color: white;
+            text-shadow: 2px 2px black;
+            background-color: rgba(0, 0, 0, 0.534);
+            border-bottom: 3px solid grey;
+
+        }
+
+        
+        
+
 
     
