--- a/index.css
+++ b/index.css
@@ -1,27 +1,35 @@
+* {
+    box-sizing: border-box;
+}
 img{
     display: block;
-    margin: auto;
-    width: 800px;
-    height: 500px;
+    margin: 20px auto;
+    width: 50%;
+    border: 2px solid black;
 }
-p { 
+p,li{ 
     font-family: system-ui;
     color: rgb(255, 255, 255);
     font-size: x-large;
-    text-shadow: 2px 2px black;
+    text-shadow: 2px 1px black;
 }
 body {
     background-position: -50px -100px;
-    background-image: url(images/austrália1.png);
+    background-image: url(images/austrália1.jpg);
     background-attachment: fixed;
 }
 #titulo{
-    text-shadow: 3px 2px rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: red;
     border: 1px whitesmoke solid;
-    background-image:url(https://image.shutterstock.com/image-vector/australian-flag-wind-260nw-53347735.jpg);
+    border-radius: 10px;
+    background-image:url(images/austrália2.webp);
     background-size: cover;
-    padding: 20px;
+    padding: 10px 20px;
+    width: 95%;
+    margin: auto;
+}
+span{
+    color: blue;
 }
 h1 {         
     color: white;
@@ -55,6 +63,9 @@ a{
     color: white;
     text-shadow: 1px black;
 }
+#referencia{
+    color: black;
+}
 .visto{
     text-align: center;
     font-family:system-ui;
@@ -66,6 +77,11 @@ h3{
     text-shadow: 2px 2px black;
     background-color: rgba(0, 0, 0, 0.534);
     border-bottom: 3px solid grey;
+}
+@media screen and (max-width: 600px){
+    img{
+        width: 90%;
+    }
 }
 
         
