--- a/index.css
+++ b/index.css
@@ -81,11 +81,17 @@ h3{
 @media screen and (max-width: 600px){
     img{
         width: 90%;
-    }
 }
-
+@media screen and (max-width: 450px){
+    @keyframes pato {
+        0%{transform: rotate(0deg); width: 100%;}
+        50%{transform: rotate(180deg);width: 130%;}
+        100%{transform: rotate(360deg);width: 100%;}
+    }    
+    #jumpscare{
+        animation: pato 1500ms infinite alternate linear;
+    }
         
-        
-
+}
 
     
