--- a/index.css
+++ b/index.css
@@ -11,16 +11,17 @@
     margin: 20px auto;
     display: block;
 }
-p,li{ 
+p,li{
     font-family: system-ui;
     color: rgb(255, 255, 255);
     font-size: x-large;
     text-shadow: 2px 1px black;
 }
 body {
-    background-position: -50px -100px;
     background-image: url(images/austrália1.jpg);
     background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #titulo{
     color: red;
@@ -35,10 +36,10 @@ body {
 span{
     color: blue;
 }
-h1 {         
+h1 {
     color: white;
     text-align: center;
-    text-shadow: 2px 2px black;       
+    text-shadow: 2px 2px black;
 }
 h2{
     font-family: system-ui;
@@ -62,7 +63,7 @@ h4{
     color: white;
     text-shadow:2px 2px black;
 }
-a{        
+a{
     font-family: system-ui;
     color: white;
     text-shadow: 1px black;
@@ -91,11 +92,9 @@ h3{
         0%{transform: rotate(0deg); width: 100%;}
         50%{transform: rotate(180deg);width: 130%;}
         100%{transform: rotate(360deg);width: 100%;}
-    }    
+    }
     #jumpscare{
         animation: pato 1500ms infinite alternate linear;
     }
-        
-}
 
-    
+}
