--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     margin: 0px;
 }
 nav{
-    background-color: gray;
+    background-color: #94D1FF;
     align-items: center;
     display: flex;
     justify-content: right;
@@ -39,18 +39,18 @@ nav{
 .navBtn{
     width: 25%;
     padding: 30px 0px;
-    background-color: gray;
+    background-color: #94D1FF;
     text-align: center;
     font-size: 3vh;
     text-decoration: none;
-    color: black;
+    color: darkblue;
     transition: 150ms;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .navBtn:hover{
-    background-color: black;
+    background-color: #1B9DFF;
     color: white;
 }
 .images{
@@ -107,12 +107,44 @@ h4{
     background-color: rgba(0, 0, 0, 0.5);
     border: 2px black solid;
 }
-i{
-    font-size: 4vh;
-    margin-left: 10px;
-    color: white;
-    text-shadow: 1px 1px black;
+#form{
+  color: black;
+  text-shadow: none;
+  border-bottom: 2px black solid;
+}
+li,p{
+  margin-left: 20px;
+}
+form{
+  width: 50%;
+  margin: 75px auto;
+  background: rgba(255,255,255, 0.9);
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
+  padding: 20px 10px;
+  border: solid black 2px;
+  border-radius: 20px;
+}
+.row{
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 20px;
+}
+label{
+  font-size: 3vh;
+}
+input{
+  width: 40%;
+  font-size: 2vh;
+  text-align: center;
 }
 @media screen and (max-width: 600px){
     img{ width: 90%;}
 }
+/*
+"Herivelton cuimachovicz"
+https://www.facebook.com/herivelton.cuimachovicz/
+*/
