--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 }
 body{
     background-image: url(images/austrália1.jpg);
-    background-attachment: fixed;
+    background-position: center;
     background-size: cover;
+    background-attachment:fixed;
     margin: 0px;
 }
 
@@ -30,7 +31,11 @@ nav{
     padding: 30px 0px;
     background-color: #94D1FF;
     text-align: center;
-    font-size: 3vh;
+    font-size: 3vh;Arranjar emprego não é fácil, e a Austrália não é uma exceção, a maioria dos migrantes vindos de outros países começam suas carreiras de trabalho na Austrália trabalhando em locais como restaurantes e obras.É sempre recomendável aprender inglês antes de ir para lá, porém nem todos fazem isso.
+
+Pessoas com nível de inglês básico é recomendado começarem em trabalhos que não exigem conversas complexas, como a limpeza em obras.
+Para pessoas com nível intermediário de Inglês, pode trabalhar de Lavador de louça ou Barista em cafeterias e restaurantes em cidades menores, que precisem de funcionários.
+O salário mínimo na Austrália é de 19,84 dólares australianos por hora, um dos mais altos do mundo, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.
     text-decoration: none;
     color: darkblue;
     transition: 150ms;
@@ -45,11 +50,17 @@ nav{
 
 
 
-.images{
+.images,
+#imageMaped{
     display: block;
     margin: 20px auto;
     width: 30%;
     border: 2px solid black;
+    transition: 100ms;
+}
+.images:hover,
+#imageMaped:hover{
+    transform: scale(1.01);
 }
 #imageMaped{
     margin: 20px auto;
@@ -66,10 +77,10 @@ p{
 }
 #titulo{
     color: red;
-    margin: 20px auto;
+    margin: 20pFormuláriox auto;
 }
 span{
-  color: blue;
+    color: blue;
 }
 h1{
     color: white;
@@ -108,39 +119,6 @@ li,p,h4{
   margin-left: 20px;
 }
 
-/* FORMULÁRIO */
-
-form{
-  width:100%;
-  height: 100%;
-  margin: auto;
-  background: rgba(37,40,233, 0.4);
-  color: red;
-  display: flex;
-  justify-content: space-between;
-  flex-flow: column;
-  padding: 20px 10px;
-  margin-bottom: 20px;
-}
-.row{
-  display: flex;
-  flex-flow: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 20px;
-}
-label{
-  font-size: 3vh;
-}
-input{
-  width: 40%;
-  font-size: 2vh;
-  text-align: center;
-}
 @media screen and (max-width: 600px){
     img{ width: 90%;}
 }
-/*
-"Herivelton cuimachovicz"
-https://www.facebook.com/herivelton.cuimachovicz/
-*/
