--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(images/austrália1.jpg);
+    background-image: url(images/austrália1.webp);
     background-position: center;
     background-size: cover;
     background-attachment:fixed;
@@ -12,7 +12,7 @@ body{
 
 /* NAV */
 nav{
-    background-color: #94D1FF;
+    background-color: #3824ff;
     align-items: center;
     display: flex;
     justify-content: right;
@@ -20,34 +20,30 @@ nav{
 .navHalfs{
     display: flex;
     justify-content: space-around;
-    width: 50%;
+    width: 70%;
+    height: 15vh;
 }
 .navHalfs:nth-child(1){
-    justify-content: left;
     margin-left: 20px;
+    width: 30%;
+    justify-content: flex-start;
 }
 .navBtn{
     width: 25%;
-    padding: 30px 0px;
-    background-color: #94D1FF;
+    aspect-ratio: 2/1;
+    background-color: #3824ff;
     text-align: center;
-    font-size: 3vh;Arranjar emprego não é fácil, e a Austrália não é uma exceção, a maioria dos migrantes vindos de outros países começam suas carreiras de trabalho na Austrália trabalhando em locais como restaurantes e obras.É sempre recomendável aprender inglês antes de ir para lá, porém nem todos fazem isso.
-
-Pessoas com nível de inglês básico é recomendado começarem em trabalhos que não exigem conversas complexas, como a limpeza em obras.
-Para pessoas com nível intermediário de Inglês, pode trabalhar de Lavador de louça ou Barista em cafeterias e restaurantes em cidades menores, que precisem de funcionários.
-O salário mínimo na Austrália é de 19,84 dólares australianos por hora, um dos mais altos do mundo, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.
+    font-size: 4vh;
     text-decoration: none;
-    color: darkblue;
+    color: #fff;
     transition: 150ms;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .navBtn:hover{
-    background-color: #1B9DFF;
-    color: white;
+    background-color: #10029a;
 }
-
 
 
 .images,
@@ -57,10 +53,6 @@ O salário mínimo na Austrália é de 19,84 dólares australianos por hora, um 
     width: 30%;
     border: 2px solid black;
     transition: 100ms;
-}
-.images:hover,
-#imageMaped:hover{
-    transform: scale(1.01);
 }
 #imageMaped{
     margin: 20px auto;
