--- a/formulario/formulario.css
+++ b/formulario/formulario.css
@@ -1,9 +1,8 @@
 body,html{
-  width: 100%;
-  height: 100%;
+  margin: 0px;
+  color: white;
 }
 h1{
-  color: white;
   text-shadow: 2px 2px black;
   font-size: 4.5vh;
 }
@@ -24,6 +23,7 @@ form{
   display: flex;
   flex-flow: column;
   justify-content: space-evenly;
+  margin-bottom: 20px;
 }
 .row{
   display: flex;
@@ -34,7 +34,6 @@ form{
 }
 label{
   font-size: 3vh;
-  color: white;
   margin-bottom: 15px;
 }
 textarea{
@@ -42,18 +41,34 @@ textarea{
   font-size: 2vh;
   border-radius: 8px;
 }
-input[type = 'submit']{
-  padding: 20px 10%;
+.buttonsDiv{
+  display: flex;
+  width: 50%;
   margin: 0px auto;
-  border-radius: 20px;
-  font-size: 3vh;
-  background: #43BF1B;
+  justify-content: space-evenly;
+}
+a,input[type = 'submit']{
+  width: 45%;
+  border: none;
+  padding: 10px 0px;
   color: white;
+  text-align: center;
+  font-size: 3.5vh;
+  text-decoration: none;
+  border-radius: 20px;
   transition: 100ms;
   cursor: pointer;
-  border: none;
-  margin-top: 20px;
+}
+input[type = 'submit']{
+  background: #43BF1B;
 }
 input[type = 'submit']:hover{
   background: #2F8F0F;
+}
+a{
+  background: blue;
+}
+a:hover{
+  background: darkblue;
+
 }
