--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@ body{
     background-position: center;
     background-size: cover;
     background-attachment:fixed;
-    margin: 0px;
+    margin: 0px 0px 30px 0px;
+    overflow-x: hidden;
 }
-
-
+::selection{
+    background-color: rgba(255, 0, 0, 0.5);
+}
 /* NAV */
 nav{
     background-color: #3824ff;
@@ -21,19 +23,18 @@ nav{
     display: flex;
     justify-content: space-around;
     width: 70%;
-    height: 15vh;
+    height: 12.5vh;
 }
 .navHalfs:nth-child(1){
-    margin-left: 20px;
     width: 30%;
     justify-content: flex-start;
+    align-items: center;
 }
 .navBtn{
     width: 25%;
     aspect-ratio: 2/1;
     background-color: #3824ff;
-    text-align: center;
-    font-size: 4vh;
+    font-size: 3.5vh;
     text-decoration: none;
     color: #fff;
     transition: 150ms;
@@ -41,58 +42,56 @@ nav{
     align-items: center;
     justify-content: center;
 }
+.actualPage{
+    background-color: #10029a; 
+    cursor: auto;  
+}
 .navBtn:hover{
     background-color: #10029a;
 }
+#logo{
+    height: 100%;
+}
 
 
-.images,
-#imageMaped{
-    display: block;
-    margin: 20px auto;
-    width: 30%;
-    border: 2px solid black;
-    transition: 100ms;
-}
-#imageMaped{
-    margin: 20px auto;
-    display: block;
-}
-p,li,.links{
-    font-family: system-ui;
-    color: rgb(255, 255, 255);
-    font-size: x-large;
-    text-shadow: 2px 1px black;
-}
-p{
-    text-indent: 70px;
-}
-#titulo{
-    color: red;
-    margin: 20pFormuláriox auto;
-}
-span{
-    color: blue;
-}
 h1{
     color: white;
     text-align: center;
     text-shadow: 2px 2px black;
 }
-.instructions,.subtitulo{
+strong,p,li,.embassy{
+    color: white;
+    font-size: 3.5vh;
+    text-shadow: 2px 1px black;
+    font-family: system-ui;
+}
+strong{
+    font-family: Helvetica, sans-serif, Arial;
+    text-shadow: 1px 1px black;
+    font-size: 4vh;
+    display: block;
+    margin: 0px 25px;
+}
+p,strong{
+    text-indent: 50px;
+}
+p,li{
+    margin: 0px 20px;
+}
+.images,
+#imageMaped{
+    display: block;
+    margin: 30px auto;
+    width: 30vw;
+    border: 1px solid black;
+}
+.subtitulo{
     font-family: system-ui;
     border-bottom: 6px solid red;
-    background-color: rgba(59, 53, 109, 0.192);
+    background-color: rgba(59, 53, 109, 0.8);
     color: white;
     text-shadow:2px 2px black;
     text-indent: 20px;
-}
-h4{
-    font-family: Helvetica, sans-serif, Arial;
-    text-shadow: 1px 1px black;
-    color: rgb(255, 255, 255);
-    font-size: x-large;
-    text-indent: 70px;
 }
 .vistos{
     font-size: 5vh;
@@ -103,14 +102,28 @@ h4{
     background-color: rgba(0, 0, 0, 0.5);
     border: 2px black solid;
 }
-#form{
-  text-shadow: none;
-  border-bottom: 2px black solid;
-}
-li,p,h4{
-  margin-left: 20px;
-}
 
 @media screen and (max-width: 600px){
-    img{ width: 90%;}
+    .images{ 
+        width: 50vw;
+    }
+    strong,.subtitulo,.vistos{
+        margin: 0px;
+        text-indent: 0px;
+        text-align: center;
+    }
+    li,p{
+        margin: 0px 15px;
+        text-align: left;
+    }
+    p{
+        text-indent: 10%;
+    }
+    .subtitulo{
+        margin:auto;
+        border: 0px;
+    }
+    .vistos{
+        border: none;
+    }
 }
