--- a/formulario/formulario.css
+++ b/formulario/formulario.css
@@ -2,13 +2,13 @@ body,html{
   margin: 0px;
   color: white;
 }
-h1{
-  text-shadow: 2px 2px black;
-  font-size: 4.5vh;
-}
 ::selection {
   color: gray;
   background: black;
+}
+h1{
+  text-shadow: 2px 2px black;
+  font-size: 4.5vh;
 }
 form{
   width:100vw;
@@ -66,9 +66,9 @@ input[type = 'submit']:hover{
   background: #2F8F0F;
 }
 a{
-  background: blue;
+  background: #2468F0;
 }
 a:hover{
-  background: darkblue;
+  background: #0039AA;
 
 }
